syntax = "proto3";
package kava.greet.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/kava-labs/kava/x/greet/types";

service Msg {
  rpc CreateGreet(MsgCreateGreet) returns (MsgCreateGreetResponse);
}

message MsgCreateGreet {
  string message = 1;
  string owner   = 2;
}

message MsgCreateGreetResponse {}